--- a/style.css
+++ b/style.css
@@ -5,10 +5,8 @@
 }
 
 body {
-  /* background-color: hsl(212, 45%, 89%); */
   background-color: #d5e1ef;
-  /* font-family: "Outfit", sans-serif; */
-  font-family: "Outfit";
+  font-family: "Outfit", sans-serif;
 }
 
 .container {
@@ -24,27 +22,24 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  /* width: 20%; */
   width: 320px;
-  /* height: 50%; */
-  height: 500px;
-  padding: 15px;
-  /* border: 1px solid white; */
+  height: 499px;
+  padding: 16px;
   border-radius: 20px;
   background-color: white;
+  box-shadow: 0 24px 32px rgba(0, 0, 0, 0.06);
 }
 
-.QR img {
+.qr {
   width: 288px;
   border-radius: 10px;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
 }
 
 .text {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
   text-align: center;
   height: 100%;
   margin-bottom: 24px;
@@ -54,16 +49,22 @@ body {
 .title {
   font-size: 22px;
   font-weight: 700;
+  line-height: 120%;
 }
 
 .card-text {
   font-size: 15px;
-  font-weight: 400;
+
+  /* font-weight: 400; seemed to be too bold so I decreased it to 300*/
+  font-weight: 300;
+  letter-spacing: 0.2px;
+  line-height: 140%;
 }
 
-. .attribution {
-  font-size: 28px;
+.attribution {
+  font-size: 15px;
   text-align: left;
+  font-weight: 300;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
